--- a/PokemonDictionary/PokemonDictionary/Base.lproj/Main.storyboard
+++ b/PokemonDictionary/PokemonDictionary/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="14p-Ce-RYW">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -12,23 +12,23 @@
         <!--Search View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="SearchViewController" customModule="PokemonDictionary" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SearchViewController" id="BYZ-38-t0r" customClass="SearchViewController" customModule="PokemonDictionary" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bJj-VA-sm8">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="158" width="414" height="704"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="12" minimumInteritemSpacing="12" id="ZVc-V4-MwX">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="20" minY="62" maxX="20" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="GLA-Zt-J19">
-                                        <rect key="frame" x="20" y="62" width="128" height="128"/>
+                                        <rect key="frame" x="20" y="20" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Ydr-SK-tPc">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
@@ -41,23 +41,53 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="wB7-O4-ph8"/>
                                 </connections>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rWU-ja-CJT" customClass="InputView" customModule="PokemonDictionary" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="108" width="414" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="nXc-em-67B"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="bJj-VA-sm8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Cys-1m-Djz"/>
+                            <constraint firstItem="rWU-ja-CJT" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="LBE-7R-3UB"/>
+                            <constraint firstItem="bJj-VA-sm8" firstAttribute="top" secondItem="rWU-ja-CJT" secondAttribute="bottom" id="Z4L-lr-N1T"/>
+                            <constraint firstItem="rWU-ja-CJT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Zfx-8R-B2S"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bJj-VA-sm8" secondAttribute="trailing" id="fpI-o4-Db8"/>
+                            <constraint firstItem="rWU-ja-CJT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="fx2-kE-WqD"/>
                             <constraint firstItem="bJj-VA-sm8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="o6y-Gy-TSl"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="bJj-VA-sm8" secondAttribute="bottom" id="qxD-AE-sDb"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="Kpt-LQ-jMW"/>
                     <connections>
+                        <outlet property="inputTopView" destination="rWU-ja-CJT" id="GMC-wd-GTK"/>
                         <outlet property="searchList" destination="bJj-VA-sm8" id="ra0-Pc-yHn"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="134"/>
+            <point key="canvasLocation" x="1047.8260869565217" y="133.92857142857142"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="z49-i9-IeV">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="14p-Ce-RYW" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="YZi-TC-Me8">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="9th-cn-DCF"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="loe-A2-6WG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="133.92857142857142"/>
         </scene>
     </scenes>
     <resources>
