--- a/PokemonDictionary/PokemonDictionary/Search/InputView/InputView.xib
+++ b/PokemonDictionary/PokemonDictionary/Search/InputView/InputView.xib
@@ -15,17 +15,17 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름 입력" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rCm-PW-gRS">
-                    <rect key="frame" x="20" y="20" width="52.5" height="17"/>
+                    <rect key="frame" x="20" y="0.0" width="52.5" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="검색어를 입력하세요." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kgb-SV-JDW">
-                    <rect key="frame" x="20" y="45" width="374" height="24"/>
+                    <rect key="frame" x="20" y="25" width="374" height="24"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="HlP-Kh-TKo"/>
                     </constraints>
@@ -33,7 +33,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pfl-GE-JuX">
-                    <rect key="frame" x="20" y="69" width="374" height="1"/>
+                    <rect key="frame" x="20" y="49" width="374" height="1"/>
                     <color key="backgroundColor" systemColor="systemGray5Color"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="dS0-9X-jnD"/>
@@ -44,7 +44,7 @@
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="pfl-GE-JuX" firstAttribute="leading" secondItem="kgb-SV-JDW" secondAttribute="leading" id="4ad-I3-HHr"/>
-                <constraint firstItem="rCm-PW-gRS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="JRf-x5-JXl"/>
+                <constraint firstItem="rCm-PW-gRS" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="JRf-x5-JXl"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="pfl-GE-JuX" secondAttribute="bottom" id="KBs-RG-QiT"/>
                 <constraint firstItem="kgb-SV-JDW" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="KRf-Ow-R1m"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="kgb-SV-JDW" secondAttribute="trailing" constant="20" id="MeO-Y9-Tw7"/>
